# emp-ic

./: .gitignore  .gitmodules  README.md
bot/: Cargo.toml
bot/src/: main.rs
candid/: emporium.did
emporium/src/: dip20.rs  ledger.rs  main.rs  token_proxy.rs
ic/: Cargo.toml  Makefile  canister_ids.json  dfx.json
ic/candid/: emporium.did
ic/emporium/: Cargo.toml  emporium.did
ic/emporium/src/: dip20.rs  http.rs  ledger.rs  main.rs  token_proxy.rs  vendor_types.rs
ic/wasm/: dip20.wasm  dip721.wasm
wasm/: cap-router.wasm
