[package]
name = "emporium-discord"
version = "0.1.0"
authors = ["ossian <self@ossian.dev>"]
edition = "2018"

[dependencies]
regex = "1.5.6"
serenity = {version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }